// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`npm view registry: npm, package: axios@0.19.1 axios@0.19.1 1`] = `
Object {
  "_hasShrinkwrap": false,
  "dependencies": Object {
    "follow-redirects": "1.5.10",
  },
  "devDependencies": Object {
    "bundlesize": "^0.17.0",
    "coveralls": "^3.0.0",
    "es6-promise": "^4.2.4",
    "grunt": "^1.0.2",
    "grunt-banner": "^0.6.0",
    "grunt-cli": "^1.2.0",
    "grunt-contrib-clean": "^1.1.0",
    "grunt-contrib-watch": "^1.0.0",
    "grunt-eslint": "^20.1.0",
    "grunt-karma": "^2.0.0",
    "grunt-mocha-test": "^0.13.3",
    "grunt-ts": "^6.0.0-beta.19",
    "grunt-webpack": "^1.0.18",
    "istanbul-instrumenter-loader": "^1.0.0",
    "jasmine-core": "^2.4.1",
    "karma": "^1.3.0",
    "karma-chrome-launcher": "^2.2.0",
    "karma-coverage": "^1.1.1",
    "karma-firefox-launcher": "^1.1.0",
    "karma-jasmine": "^1.1.1",
    "karma-jasmine-ajax": "^0.1.13",
    "karma-opera-launcher": "^1.0.0",
    "karma-safari-launcher": "^1.0.0",
    "karma-sauce-launcher": "^1.2.0",
    "karma-sinon": "^1.0.5",
    "karma-sourcemap-loader": "^0.3.7",
    "karma-webpack": "^1.7.0",
    "load-grunt-tasks": "^3.5.2",
    "minimist": "^1.2.0",
    "mocha": "^5.2.0",
    "sinon": "^4.5.0",
    "typescript": "^2.8.1",
    "url-search-params": "^0.10.0",
    "webpack": "^1.13.1",
    "webpack-dev-server": "^1.14.1",
  },
  "directories": Object {},
  "dist": Object {
    "fileCount": 42,
    "integrity": "sha512-Yl+7nfreYKaLRvAvjNPkvfjnQHJM1yLBY3zhqAwcJSwR/6ETkanUgylgtIvkvz0xJ+p/vZuNw8X7Hnb7Whsbpw==",
    "npm-signature": "-----BEGIN PGP SIGNATURE-----
Version: OpenPGP.js v3.0.4
Comment: https://openpgpjs.org

wsFcBAEBCAAQBQJeFL6cCRA9TVsSAnZWagAAj0kP/0NPs4Nmu741N8YePwEr
FEdiHcOB58DTnV08vCfDEbFhrXOjtx2zAaTtuhfXkCvYUOfRCkUXf2E64rpx
pvAhUurGuOun9kO+BCzja1nBoNWxPQfTY+1P7ebEZm403+ZkwvojEt0Sxj5x
X9zGuvNrwScK3rbUFwZ91h3Kw7Sk4vxFFTBy5aupb2mZr/LAeD+IKQzqbDFq
lkwQAwcUjeNer4VqRprm/CX/AxFrljxIwvI/1W2ksPiUM/D3AtjQKFAqCPBD
a1BvKKXOU2fMychwrhahJ6/X2sCVr0n3M8189lOiBEv1QIePk37fHJo3wffV
gZrBoJ4UsCrQBzjshJVdTJXteSpGxQcv16H/IXDX+zW596KQsJ8Amd4pA2iL
kCAIcKhjxZLcTAZhRGYieI9xtwUt1Kj5b+ALmQY1+fbKOICBO4a+GELeOaAe
1RCU/uzgPMhA+GiwK0W8gBcPH7gk8u0bGQiNNUka50H9GRlaqgN0Ex4JhMDH
VyhdhGnvttYVJV2myWLEjCVRiev91f6SBpBjcXlzoHQP0gyzu/Zx8knokVEt
+P7yzj0u4j90A8fvd9oRxkDfGLsc0qXFEZyIPpvmXP1Rs0VLRflX7X4C2qQw
ooSGYN9bBajw33dkOGHzOiyZ07oIEWdNyeEqQk3mc6aWUusfVIiawrqp7Rm3
kYmc
=MDJG
-----END PGP SIGNATURE-----
",
    "shasum": "8a6a04eed23dfe72747e1dd43c604b8f1677b5aa",
    "tarball": "https://registry.npmjs.org/axios/-/axios-0.19.1.tgz",
    "unpackedSize": 348347,
  },
  "name": "axios",
  "version": "0.19.1",
}
`;

exports[`npm view registry: npm, package: webpack@4.41.5 webpack@4.41.5 1`] = `
Object {
  "_hasShrinkwrap": false,
  "bin": Object {
    "webpack": "./bin/webpack.js",
  },
  "dependencies": Object {
    "@webassemblyjs/ast": "1.8.5",
    "@webassemblyjs/helper-module-context": "1.8.5",
    "@webassemblyjs/wasm-edit": "1.8.5",
    "@webassemblyjs/wasm-parser": "1.8.5",
    "acorn": "^6.2.1",
    "ajv": "^6.10.2",
    "ajv-keywords": "^3.4.1",
    "chrome-trace-event": "^1.0.2",
    "enhanced-resolve": "^4.1.0",
    "eslint-scope": "^4.0.3",
    "json-parse-better-errors": "^1.0.2",
    "loader-runner": "^2.4.0",
    "loader-utils": "^1.2.3",
    "memory-fs": "^0.4.1",
    "micromatch": "^3.1.10",
    "mkdirp": "^0.5.1",
    "neo-async": "^2.6.1",
    "node-libs-browser": "^2.2.1",
    "schema-utils": "^1.0.0",
    "tapable": "^1.1.3",
    "terser-webpack-plugin": "^1.4.3",
    "watchpack": "^1.6.0",
    "webpack-sources": "^1.4.1",
  },
  "devDependencies": Object {
    "@babel/core": "^7.7.2",
    "@types/node": "^10.12.21",
    "@types/tapable": "^1.0.1",
    "@types/webpack-sources": "^0.1.4",
    "@yarnpkg/lockfile": "^1.1.0",
    "babel-loader": "^8.0.6",
    "benchmark": "^2.1.1",
    "bundle-loader": "~0.5.0",
    "coffee-loader": "^0.9.0",
    "coffeescript": "^2.3.2",
    "coveralls": "^3.0.2",
    "css-loader": "^2.1.0",
    "es6-promise-polyfill": "^1.1.1",
    "eslint": "^5.8.0",
    "eslint-config-prettier": "^4.0.0",
    "eslint-plugin-jest": "^22.2.2",
    "eslint-plugin-jsdoc": "^15.3.2",
    "eslint-plugin-node": "^8.0.0",
    "eslint-plugin-prettier": "^3.0.0",
    "express": "~4.16.4",
    "file-loader": "^3.0.1",
    "glob": "^7.1.3",
    "husky": "^1.1.3",
    "i18n-webpack-plugin": "^1.0.0",
    "istanbul": "^0.4.5",
    "jest": "^24.9.0",
    "jest-junit": "^8.0.0",
    "json-loader": "^0.5.7",
    "json-schema-to-typescript": "^6.0.1",
    "less": "^3.9.0",
    "less-loader": "^4.0.3",
    "lint-staged": "^8.0.4",
    "lodash": "^4.17.4",
    "prettier": "^1.14.3",
    "pug": "^2.0.4",
    "pug-loader": "^2.4.0",
    "raw-loader": "^1.0.0",
    "react": "^16.8.0",
    "react-dom": "^16.8.0",
    "rimraf": "^2.6.2",
    "script-loader": "~0.7.0",
    "simple-git": "^1.65.0",
    "strip-ansi": "^5.2.0",
    "style-loader": "^0.23.1",
    "typescript": "^3.0.0-rc",
    "url-loader": "^1.1.2",
    "val-loader": "^1.0.2",
    "vm-browserify": "~1.1.0",
    "wast-loader": "^1.5.5",
    "webpack-dev-middleware": "^3.5.1",
    "worker-loader": "^2.0.0",
    "xxhashjs": "^0.2.1",
  },
  "directories": Object {},
  "dist": Object {
    "fileCount": 357,
    "integrity": "sha512-wp0Co4vpyumnp3KlkmpM5LWuzvZYayDwM2n17EHFr4qxBBbRokC7DJawPJC7TfSFZ9HZ6GsdH40EBj4UV0nmpw==",
    "npm-signature": "-----BEGIN PGP SIGNATURE-----
Version: OpenPGP.js v3.0.4
Comment: https://openpgpjs.org

wsFcBAEBCAAQBQJeBnNACRA9TVsSAnZWagAAop0P/0xSaHYtN5rZDZKkEwLc
VKIU2NwFjoum54HyesbEYraES5APN/rYXU/v8i68pgg8gvSqB+jWyy6I6N69
IaI9DCz9shfmqHgnddjeL8JuNPrSsk8Bw1Fb0s1NrSjOl6Y1dkDnmcvcnRUF
hL9Qt1fJktHyoEpshYejqx/U+kKLsPKS/tcoUhuOhtxlOvlfM+uI0f+xrn/J
i/BHFFjby2pcb8RzIjJ60GAYX19EDk+vvP01oKWkBCYtrrfH0/IaGgUK3N0E
AASfNwDk3qvjBKU0k9DhJYf8TsLs+XXrq5rNVqQIUS305vCpwHMmaSMvlCWP
gyP9NuFL0OKMEc/KhPhT3l1nRZkW1SIQMy3264Q27FPl1iXpAPDWOf7rMLUk
oDmuhlKMwTy8ztzO1RuvHqKDUQSQLdouD6IdbLw2zq8VhnDaHtmFo8TXF1U8
mZc4PBITU0sEjtq0imcXoydMAMZl4P0AZ8Kp8NtG5jOhTcJm0WrNKkpwM9DA
+RhYIRM6MuZfel2zyhzTkwZ/yq0GN2V5UQgYvR7CC9QTOAq/nQU6rGRfexac
vhQfdV/bWzP6wDajTHsTxVWmt7UY1DpMdsbeLuZfntuhr7Ws51HdoAK9yqZr
tjCIaL8wK5Jbj3tqzjqjqn5VdqG0VdwscN2Tf7JjVFQA1mnL26k076SrqVaS
bIlk
=mnqh
-----END PGP SIGNATURE-----
",
    "shasum": "3210f1886bce5310e62bb97204d18c263341b77c",
    "tarball": "https://registry.npmjs.org/webpack/-/webpack-4.41.5.tgz",
    "unpackedSize": 1463888,
  },
  "engines": Object {
    "node": ">=6.11.5",
  },
  "name": "webpack",
  "version": "4.41.5",
}
`;

exports[`npm view registry: taobao, package: axios@0.19.1 axios@0.19.1 1`] = `
Object {
  "_hasShrinkwrap": false,
  "dependencies": Object {
    "follow-redirects": "1.5.10",
  },
  "devDependencies": Object {
    "bundlesize": "^0.17.0",
    "coveralls": "^3.0.0",
    "es6-promise": "^4.2.4",
    "grunt": "^1.0.2",
    "grunt-banner": "^0.6.0",
    "grunt-cli": "^1.2.0",
    "grunt-contrib-clean": "^1.1.0",
    "grunt-contrib-watch": "^1.0.0",
    "grunt-eslint": "^20.1.0",
    "grunt-karma": "^2.0.0",
    "grunt-mocha-test": "^0.13.3",
    "grunt-ts": "^6.0.0-beta.19",
    "grunt-webpack": "^1.0.18",
    "istanbul-instrumenter-loader": "^1.0.0",
    "jasmine-core": "^2.4.1",
    "karma": "^1.3.0",
    "karma-chrome-launcher": "^2.2.0",
    "karma-coverage": "^1.1.1",
    "karma-firefox-launcher": "^1.1.0",
    "karma-jasmine": "^1.1.1",
    "karma-jasmine-ajax": "^0.1.13",
    "karma-opera-launcher": "^1.0.0",
    "karma-safari-launcher": "^1.0.0",
    "karma-sauce-launcher": "^1.2.0",
    "karma-sinon": "^1.0.5",
    "karma-sourcemap-loader": "^0.3.7",
    "karma-webpack": "^1.7.0",
    "load-grunt-tasks": "^3.5.2",
    "minimist": "^1.2.0",
    "mocha": "^5.2.0",
    "sinon": "^4.5.0",
    "typescript": "^2.8.1",
    "url-search-params": "^0.10.0",
    "webpack": "^1.13.1",
    "webpack-dev-server": "^1.14.1",
  },
  "directories": Object {},
  "dist": Object {
    "integrity": "sha1-imoE7tI9/nJ0fh3UPGBLjxZ3tao=",
    "noattachment": false,
    "shasum": "8a6a04eed23dfe72747e1dd43c604b8f1677b5aa",
    "size": 88708,
    "tarball": "https://registry.npm.taobao.org/axios/download/axios-0.19.1.tgz",
  },
  "name": "axios",
  "publish_time": 1578417819782,
  "version": "0.19.1",
}
`;

exports[`npm view registry: taobao, package: webpack@4.41.5 webpack@4.41.5 1`] = `
Object {
  "_hasShrinkwrap": false,
  "bin": Object {
    "webpack": "./bin/webpack.js",
  },
  "dependencies": Object {
    "@webassemblyjs/ast": "1.8.5",
    "@webassemblyjs/helper-module-context": "1.8.5",
    "@webassemblyjs/wasm-edit": "1.8.5",
    "@webassemblyjs/wasm-parser": "1.8.5",
    "acorn": "^6.2.1",
    "ajv": "^6.10.2",
    "ajv-keywords": "^3.4.1",
    "chrome-trace-event": "^1.0.2",
    "enhanced-resolve": "^4.1.0",
    "eslint-scope": "^4.0.3",
    "json-parse-better-errors": "^1.0.2",
    "loader-runner": "^2.4.0",
    "loader-utils": "^1.2.3",
    "memory-fs": "^0.4.1",
    "micromatch": "^3.1.10",
    "mkdirp": "^0.5.1",
    "neo-async": "^2.6.1",
    "node-libs-browser": "^2.2.1",
    "schema-utils": "^1.0.0",
    "tapable": "^1.1.3",
    "terser-webpack-plugin": "^1.4.3",
    "watchpack": "^1.6.0",
    "webpack-sources": "^1.4.1",
  },
  "devDependencies": Object {
    "@babel/core": "^7.7.2",
    "@types/node": "^10.12.21",
    "@types/tapable": "^1.0.1",
    "@types/webpack-sources": "^0.1.4",
    "@yarnpkg/lockfile": "^1.1.0",
    "babel-loader": "^8.0.6",
    "benchmark": "^2.1.1",
    "bundle-loader": "~0.5.0",
    "coffee-loader": "^0.9.0",
    "coffeescript": "^2.3.2",
    "coveralls": "^3.0.2",
    "css-loader": "^2.1.0",
    "es6-promise-polyfill": "^1.1.1",
    "eslint": "^5.8.0",
    "eslint-config-prettier": "^4.0.0",
    "eslint-plugin-jest": "^22.2.2",
    "eslint-plugin-jsdoc": "^15.3.2",
    "eslint-plugin-node": "^8.0.0",
    "eslint-plugin-prettier": "^3.0.0",
    "express": "~4.16.4",
    "file-loader": "^3.0.1",
    "glob": "^7.1.3",
    "husky": "^1.1.3",
    "i18n-webpack-plugin": "^1.0.0",
    "istanbul": "^0.4.5",
    "jest": "^24.9.0",
    "jest-junit": "^8.0.0",
    "json-loader": "^0.5.7",
    "json-schema-to-typescript": "^6.0.1",
    "less": "^3.9.0",
    "less-loader": "^4.0.3",
    "lint-staged": "^8.0.4",
    "lodash": "^4.17.4",
    "prettier": "^1.14.3",
    "pug": "^2.0.4",
    "pug-loader": "^2.4.0",
    "raw-loader": "^1.0.0",
    "react": "^16.8.0",
    "react-dom": "^16.8.0",
    "rimraf": "^2.6.2",
    "script-loader": "~0.7.0",
    "simple-git": "^1.65.0",
    "strip-ansi": "^5.2.0",
    "style-loader": "^0.23.1",
    "typescript": "^3.0.0-rc",
    "url-loader": "^1.1.2",
    "val-loader": "^1.0.2",
    "vm-browserify": "~1.1.0",
    "wast-loader": "^1.5.5",
    "webpack-dev-middleware": "^3.5.1",
    "worker-loader": "^2.0.0",
    "xxhashjs": "^0.2.1",
  },
  "directories": Object {},
  "dist": Object {
    "integrity": "sha1-MhDxiGvOUxDmK7lyBNGMJjNBt3w=",
    "noattachment": false,
    "shasum": "3210f1886bce5310e62bb97204d18c263341b77c",
    "size": 308415,
    "tarball": "https://registry.npm.taobao.org/webpack/download/webpack-4.41.5.tgz",
  },
  "engines": Object {
    "node": ">=6.11.5",
  },
  "name": "webpack",
  "publish_time": 1577481023868,
  "version": "4.41.5",
}
`;

exports[`npm view registry: taobao, package: webpack@4.41.5 webpack@4.41.5 2`] = `
Object {
  "_hasShrinkwrap": false,
  "bin": Object {
    "webpack": "./bin/webpack.js",
  },
  "dependencies": Object {
    "@webassemblyjs/ast": "1.8.5",
    "@webassemblyjs/helper-module-context": "1.8.5",
    "@webassemblyjs/wasm-edit": "1.8.5",
    "@webassemblyjs/wasm-parser": "1.8.5",
    "acorn": "^6.2.1",
    "ajv": "^6.10.2",
    "ajv-keywords": "^3.4.1",
    "chrome-trace-event": "^1.0.2",
    "enhanced-resolve": "^4.1.0",
    "eslint-scope": "^4.0.3",
    "json-parse-better-errors": "^1.0.2",
    "loader-runner": "^2.4.0",
    "loader-utils": "^1.2.3",
    "memory-fs": "^0.4.1",
    "micromatch": "^3.1.10",
    "mkdirp": "^0.5.1",
    "neo-async": "^2.6.1",
    "node-libs-browser": "^2.2.1",
    "schema-utils": "^1.0.0",
    "tapable": "^1.1.3",
    "terser-webpack-plugin": "^1.4.3",
    "watchpack": "^1.6.0",
    "webpack-sources": "^1.4.1",
  },
  "devDependencies": Object {
    "@babel/core": "^7.7.2",
    "@types/node": "^10.12.21",
    "@types/tapable": "^1.0.1",
    "@types/webpack-sources": "^0.1.4",
    "@yarnpkg/lockfile": "^1.1.0",
    "babel-loader": "^8.0.6",
    "benchmark": "^2.1.1",
    "bundle-loader": "~0.5.0",
    "coffee-loader": "^0.9.0",
    "coffeescript": "^2.3.2",
    "coveralls": "^3.0.2",
    "css-loader": "^2.1.0",
    "es6-promise-polyfill": "^1.1.1",
    "eslint": "^5.8.0",
    "eslint-config-prettier": "^4.0.0",
    "eslint-plugin-jest": "^22.2.2",
    "eslint-plugin-jsdoc": "^15.3.2",
    "eslint-plugin-node": "^8.0.0",
    "eslint-plugin-prettier": "^3.0.0",
    "express": "~4.16.4",
    "file-loader": "^3.0.1",
    "glob": "^7.1.3",
    "husky": "^1.1.3",
    "i18n-webpack-plugin": "^1.0.0",
    "istanbul": "^0.4.5",
    "jest": "^24.9.0",
    "jest-junit": "^8.0.0",
    "json-loader": "^0.5.7",
    "json-schema-to-typescript": "^6.0.1",
    "less": "^3.9.0",
    "less-loader": "^4.0.3",
    "lint-staged": "^8.0.4",
    "lodash": "^4.17.4",
    "prettier": "^1.14.3",
    "pug": "^2.0.4",
    "pug-loader": "^2.4.0",
    "raw-loader": "^1.0.0",
    "react": "^16.8.0",
    "react-dom": "^16.8.0",
    "rimraf": "^2.6.2",
    "script-loader": "~0.7.0",
    "simple-git": "^1.65.0",
    "strip-ansi": "^5.2.0",
    "style-loader": "^0.23.1",
    "typescript": "^3.0.0-rc",
    "url-loader": "^1.1.2",
    "val-loader": "^1.0.2",
    "vm-browserify": "~1.1.0",
    "wast-loader": "^1.5.5",
    "webpack-dev-middleware": "^3.5.1",
    "worker-loader": "^2.0.0",
    "xxhashjs": "^0.2.1",
  },
  "directories": Object {},
  "dist": Object {
    "integrity": "sha1-MhDxiGvOUxDmK7lyBNGMJjNBt3w=",
    "noattachment": false,
    "shasum": "3210f1886bce5310e62bb97204d18c263341b77c",
    "size": 308415,
    "tarball": "https://registry.npm.taobao.org/webpack/download/webpack-4.41.5.tgz",
  },
  "engines": Object {
    "node": ">=6.11.5",
  },
  "name": "webpack",
  "publish_time": 1577481023868,
  "version": "4.41.5",
}
`;
